# blue-dot

./: .gitignore  CMakeLists.txt
shaders/: fshading_example.glsl  vshading_example.glsl
source/: Earth.cpp  EarthSystem.cc  EarthSystem.h  sMesh.cc  sMesh.h
source/common/: Material.cc  Material.h  ObjMesh.cpp  ObjMesh.h  SourcePath.cpp
